# ailiance

./: .env.example  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  LICENSE  MODEL_CARD.md  README.md  pyproject.toml  requirements-ci.txt
.github/workflows/: ci.yml  docs-check.yml
configs/: apertus.yaml  chain_policies.yaml  devstral.yaml  eurollm.yaml  gateway.yaml  gemma4.yaml  models-display.yaml  reflector_prompts.yaml
configs/v3-track-c/: ailiance-v3-apertus-kicad-sch-D1.yaml  ailiance-v3-apertus-kicad-sch-D2.yaml  ailiance-v3-apertus-kicad-sch-D3.yaml  ailiance-v3-devstral-kicad-sch-D1.yaml  ailiance-v3-devstral-kicad-sch-D2.yaml  ailiance-v3-devstral-kicad-sch-D3.yaml  ailiance-v3-eurollm-kicad-sch-D1.yaml  ailiance-v3-eurollm-kicad-sch-D2.yaml  ailiance-v3-eurollm-kicad-sch-D3.yaml  ailiance-v3-gemma4-kicad-sch-D1.yaml  ailiance-v3-gemma4-kicad-sch-D2.yaml  ailiance-v3-gemma4-kicad-sch-D3.yaml  ailiance-v3-medium35-kicad-sch-D1.yaml  ailiance-v3-medium35-kicad-sch-D2.yaml  ailiance-v3-medium35-kicad-sch-D3.yaml  ailiance-v3-qwen36-kicad-sch-D1.yaml  ailiance-v3-qwen36-kicad-sch-D2.yaml  ailiance-v3-qwen36-kicad-sch-D3.yaml  eu-kiki-v3-apertus-kicad-sch-D1.yaml  eu-kiki-v3-apertus-kicad-sch-D2.yaml  eu-kiki-v3-apertus-kicad-sch-D3.yaml  eu-kiki-v3-devstral-kicad-sch-D1.yaml  eu-kiki-v3-devstral-kicad-sch-D2.yaml  eu-kiki-v3-devstral-kicad-sch-D3.yaml  eu-kiki-v3-eurollm-kicad-sch-D1.yaml  eu-kiki-v3-eurollm-kicad-sch-D2.yaml  eu-kiki-v3-eurollm-kicad-sch-D3.yaml  eu-kiki-v3-gemma4-kicad-sch-D1.yaml  eu-kiki-v3-gemma4-kicad-sch-D2.yaml  eu-kiki-v3-gemma4-kicad-sch-D3.yaml  eu-kiki-v3-medium35-kicad-sch-D1.yaml  eu-kiki-v3-medium35-kicad-sch-D2.yaml  eu-kiki-v3-medium35-kicad-sch-D3.yaml  eu-kiki-v3-qwen36-kicad-sch-D1.yaml  eu-kiki-v3-qwen36-kicad-sch-D2.yaml  eu-kiki-v3-qwen36-kicad-sch-D3.yaml
data/router-clean/: .gitignore  PROVENANCE.json
docs/: eu-ai-act-transparency.md  eu-aiact-eval-2026-05.md  pdf-compliance-report.md  router-mascarade-override-2026-05-11.md  router-v0.3-deliberate.md  vlm-compliance-report.md
docs/known-issues/: omlx-mistral-small-detok.md
docs/plans/: 2026-05-11-router-agentic-v0.3.md
docs/provenance/: README.md  apertus-70b-instruct-2509.json  auto-router-minilm.json  devstral-small-2-24b-instruct-2512.json  eurollm-22b-instruct-2512.json  gemma-3-4b-it.json  qwen3-next-80b-a3b-instruct.json
docs/router/: v6-reproduction-2026-05-11.md
docs/runbook/: nvidia-driver-mismatch.md
docs/runbooks/: medium35-campaign.md  medium35-deploy.md
docs/specs/: 2026-04-26-ailiance-design.md  2026-04-26-ailiance-plan.md  2026-04-26-eu-kiki-design.md  2026-04-26-eu-kiki-plan.md  2026-05-04-agent-kiki-design.md
docs/transparency/: 2026-05-19-phase1-ram-demotion.md  confusion-top10.md  router-training-data.md
eval/: .gitignore  HOSTS.md  README.md  WORKFLOW.md  run_all.sh
eval/results/: SUMMARY.md
eval/runners/: evalplus_runner.py  fuse_adapter.sh  kiki_native_runner.py  lighteval_runner.py  mlx_server_runner.py  mtbench_runner.py  result_writer.py
output/router-v7-multimodel/: label_map.json  meta.json
sbom/: cyclonedx.json  pip-audit.json
scripts/: augment_niche_domains.py  augment_router_data.py  augment_short_greetings.py  bench_base.py  bench_comparison.py  build_confusion_matrix.py  build_hf_datasets.py  build_hf_niche_datasets.py  build_kicad_freecad_domains.py  build_missing_domains.py  build_router_data.py  calibrate_threshold.py  check_router_doc_alignment.py  deploy_mistral_studio.sh  encode_router_jina.py  encode_router_minilm.py  enrich_weak_domains.py  eval_framework.py  fix_provenance.py  launch_eval_safe.sh  merge_cpp_embedded.py  phase3_launcher.sh  prepare_curriculum.py  prepare_kicad_pcb_fullseq.py  rebuild_cpp.py  rebuild_cpp_embedded.py  rebuild_router_dataset.py  rebuild_shell.py  router_benchmark.py  router_v7_curate.py  router_v7_gen.py  router_v7_train.py  run_eval.sh  run_eval_n3.py  run_iact_validators.py  run_iact_validators.sh  run_track_d.sh  scan_pii.py  scrape_arduino_examples.py  scrape_arxiv_eess.py  (+23 more)
scripts/kicad_sch/: README.md  __init__.py  audit_log.py  eval_n3.py  hybrid_pipeline.py  lineage_validator.py  manifest.py  mix_d3.py  run_m2_all.sh  scrape_d1.py  scrape_d1_repos.py  smoke_train.sh  strip_lib_symbols.py  synth_d2.py  train_lora.py
scripts/launchd/: cc.ailiance.mistral.plist
scripts/pdf_pipeline/: __init__.py  compliance_report.py  config.py  pdf_downloader.py  pdf_extractor.py  pdf_to_training.py  pipeline.py  robots_checker.py
scripts/studio/: medium35_train_domain.sh  medium35_workers.sh
src/gateway/: alias_inventory.py  file_extract.py  inference_defaults.py  inline_files.py  observability.py  server.py  tenant_isolation.py
src/mlx_models/: apertus.py  xielu.py
src/orchestrator/: __init__.py  chain_orchestrator.py  chain_policy.py  validators.py
src/realtime/: __init__.py  llm_adapter.py  protocol.py  router.py  session.py  stt_adapter.py  tts_adapter.py
src/router/: classifier.py  domain_map.py
src/worker/: function_calling.py  runtime.py  (+2 more)
tests/: test_apertus_model.py  test_broken_devstral_fallback.py  test_eval_framework.py  test_gateway.py  test_gateway_alias_inventory.py  test_gateway_auto_router.py  test_gateway_byte_repair.py  test_gateway_cors.py  test_gateway_file_extract.py  test_gateway_inference_defaults.py  test_gateway_inline_files.py  test_gateway_message_normalize.py  test_gateway_multimodal.py  test_gateway_normalize_response.py  test_gateway_ocr.py  test_gateway_orchestrator.py  test_gateway_stop_tokens.py  test_gateway_stream_normalize.py  test_gateway_system_prompt.py  test_gateway_tenant_isolation.py  test_gateway_training_mode.py  test_integration.py  test_router.py  test_runtime.py  test_swap_pool_routing.py  test_training_admin.py  test_training_domains.py  test_training_orchestrator.py  test_training_progress.py  test_training_state.py  test_training_studio_ops.py  test_worker.py  test_xielu.py
(+124 files in other folders)
