[project]
name = "ailiance"
version = "0.1.0-dev"
description = "EU-sovereign multi-model LLM serving pipeline"
requires-python = ">=3.13"
license = "Apache-2.0"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "mlx>=0.22",
    "mlx-lm>=0.22",
    "httpx>=0.28",
    "pyyaml>=6.0",
    "safetensors>=0.4",
    "prometheus-client>=0.21",
    "pydantic>=2.10",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "httpx"]
router = ["sentence-transformers>=3.4", "torch>=2.6"]
data = ["datasets>=2.19", "huggingface-hub>=0.23"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
