[project]
name = "ailiance"
version = "0.1.0-dev"
description = "EU-sovereign multi-model LLM serving pipeline"
requires-python = ">=3.13"
license = "Apache-2.0"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "mlx>=0.22",
    "mlx-lm>=0.22",
    "httpx>=0.28",
    "pyyaml>=6.0",
    "safetensors>=0.4",
    "prometheus-client>=0.21",
    "pydantic>=2.10",
    "networkx>=3.6.1",
    # Langfuse server is v2.x — pin SDK to the matching v2.x branch since v3+
    # switched to an OTEL exporter incompatible with the v2 ingestion endpoint.
    "langfuse>=2.50,<3",
    "structlog>=24.0",
    # File extraction for /v1/files/extract — PDF/docx/xlsx/pptx/html/etc.
    # markitdown is MIT-licensed. Pinned light deps directly to avoid the
    # markitdown[*] extras which pull onnxruntime (no cp314 wheels yet)
    # for image/OCR features we don't enable here.
    "pdfminer-six>=20231228",  # PDF text extraction
    "python-docx>=1.1",  # .docx
    "openpyxl>=3.1",  # .xlsx
    "python-pptx>=1.0",  # .pptx
    "beautifulsoup4>=4.12",  # HTML / fallback
    "python-multipart>=0.0.9",  # FastAPI multipart upload parser
    # OCR — image-only PDFs and direct image uploads via Tesseract.
    # System deps required on the host: tesseract-ocr + tesseract-ocr-fra
    # + tesseract-ocr-eng + poppler-utils. Python wrappers are pure
    # Python and cheap.
    "pytesseract>=0.3.10",
    "pillow>=10.0",
    "pdf2image>=1.17",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "httpx"]
router = ["sentence-transformers>=3.4", "torch>=2.6"]
data = ["datasets>=2.19", "huggingface-hub>=0.23"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["vendored", ".venv", "node_modules"]
