[project]
name = "ailiance"
version = "0.1.0-dev"
description = "EU-sovereign multi-model LLM serving pipeline"
requires-python = ">=3.13"
license = "Apache-2.0"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "mlx>=0.22",
    "mlx-lm>=0.22",
    "httpx>=0.28",
    "pyyaml>=6.0",
    "safetensors>=0.4",
    "prometheus-client>=0.21",
    "pydantic>=2.10",
    "networkx>=3.6.1",
    # Langfuse server is v2.x — pin SDK to the matching v2.x branch since v3+
    # switched to an OTEL exporter incompatible with the v2 ingestion endpoint.
    "langfuse>=2.50,<3",
    "structlog>=24.0",
    # File extraction for /v1/files/extract — PDF/docx/xlsx/pptx/html/etc.
    # markitdown is MIT-licensed. Pinned light deps directly to avoid the
    # markitdown[*] extras which pull onnxruntime (no cp314 wheels yet)
    # for image/OCR features we don't enable here.
    "pdfminer-six>=20231228",  # PDF text extraction
    "python-docx>=1.1",  # .docx
    "openpyxl>=3.1",  # .xlsx
    "python-pptx>=1.0",  # .pptx
    "beautifulsoup4>=4.12",  # HTML / fallback
    "python-multipart>=0.0.9",  # FastAPI multipart upload parser
    # OCR — image-only PDFs and direct image uploads via Tesseract.
    # System deps required on the host: tesseract-ocr + tesseract-ocr-fra
    # + tesseract-ocr-eng + poppler-utils. Python wrappers are pure
    # Python and cheap.
    "pytesseract>=0.3.10",
    "pillow>=10.0",
    "pdf2image>=1.17",
    # OpenAI Realtime API wrap (src/realtime/) — msgpack framing on the
    # Kyutai STT WS, scipy for input audio resampling, soundfile for
    # voice-bridge WAV payload decoding, websockets for the upstream WS.
    "msgpack>=1.0",
    "scipy>=1.10",
    "soundfile>=0.12",
    "websockets>=12",
    # Gaia-X credential issuance (src/gateway/gaia_x/) — JWS signing of
    # Verifiable Credentials and URDNA2015 JSON-LD canonicalization.
    "jwcrypto>=1.5",
    "pyld>=2.0",
    "cryptography>=41",  # RSA signing key + publicKeyJwk (keys.py)
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "httpx"]
router = ["sentence-transformers>=3.4", "torch>=2.6"]
data = ["datasets>=2.19", "huggingface-hub>=0.23"]

[tool.uv]
# CVE floors for transitive deps (pip-audit 2026-05-29). Constrains the
# resolver without declaring these as direct dependencies.
constraint-dependencies = [
    "starlette>=1.0.1",  # CVE-2026-48710 / PYSEC-2026-161 (ASGI under FastAPI)
    "urllib3>=2.7.0",    # CVE-2026-44431, CVE-2026-44432
    "idna>=3.15",        # CVE-2026-45409
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["vendored", ".venv", "node_modules"]
# E2E tests hit production (gateway.ailiance.fr, www.ailiance.fr) and
# should not run as part of the default suite. Invoke explicitly with
# ``pytest -m e2e`` after a deploy.
addopts = "-m 'not e2e'"
markers = [
    "e2e: end-to-end test against production endpoints (gateway.ailiance.fr, www.ailiance.fr)",
    "network: needs network (Gaia-X JSON-LD context fetch; offline cache deferred). Skip with -m 'not network'.",
]
